tests/errors/WriteUndeclaredArrayIndex.imp
VAR
  a
BEGIN
  WRITE b[42];
END
